[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/UIStart.gd" type="Script" id=1]
[ext_resource path="res://art/UI/FMOD Logo White - Black Background.png" type="Texture" id=2]
[ext_resource path="res://art/UI/Panel_Dialogue.png" type="Texture" id=3]
[ext_resource path="res://tres/IR_Theme.tres" type="Theme" id=4]
[ext_resource path="res://art/UI/fonts/ubuntu/Ubuntu-B.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 79
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 3840, 365 )
modulate_color = Color( 0.705882, 0.705882, 0.705882, 0.705882 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 3840, 365 )

[sub_resource type="DynamicFont" id=4]
size = 18
font_data = ExtResource( 5 )

[node name="UIStart" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 4 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 920.0
margin_bottom = 664.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PauseMenu" type="VBoxContainer" parent="Panel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Panel/PauseMenu"]
margin_left = 248.0
margin_top = 130.0
margin_right = 711.0
margin_bottom = 219.0
size_flags_horizontal = 4
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "Sneak'n'Run"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Menu" type="VBoxContainer" parent="Panel/PauseMenu"]
margin_left = 421.0
margin_top = 354.0
margin_right = 539.0
margin_bottom = 704.0
size_flags_horizontal = 6
size_flags_vertical = 15

[node name="StartGame" type="Button" parent="Panel/PauseMenu/Menu"]
margin_right = 118.0
margin_bottom = 21.0
custom_styles/hover = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "          Play          "

[node name="Quit" type="Button" parent="Panel/PauseMenu/Menu"]
margin_top = 25.0
margin_right = 118.0
margin_bottom = 46.0
custom_styles/hover = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "Quit"

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 3.2
anchor_top = 6.4
anchor_right = 21.4
anchor_bottom = 11.2
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
[connection signal="pressed" from="Panel/PauseMenu/Menu/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="Panel/PauseMenu/Menu/Quit" to="." method="_on_Quit_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
